packages/CodingStandard/DotBlue/tests/invalid/PhpDocMethodParametersName.php
<?php

namespace Foo;


class Bar
{

	/**
	 * @param  string $foo
	 */
	public function foo($foo)
	{
	}



	/**
	 * @param  callable ($bar)
	 */
	public function bar(callable $foo)
	{
	}

}
